--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -3,9 +3,7 @@ layout: default
 route: documentation
 ---
 
-<div class="container">
-  {% include header.html %}
-</div>
+{% include navbar.html %}
 
 <section class="hero is-primary">
   <div class="hero-body">
