--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -32,7 +32,7 @@ doc-subtab: modal
         </li>
       </ul>
       <p>
-        <a class="button is-primary is-large modal-button" data-target="#modal">Launch example modal</a>
+        <a class="button is-primary is-large modal-button" data-target="modal">Launch example modal</a>
       </p>
     </div>
 
@@ -42,7 +42,7 @@ doc-subtab: modal
   <div class="modal-content">
     <!-- Any other Bulma elements you want -->
   </div>
-  <button class="modal-close"></button>
+  <button class="modal-close is-large"></button>
 </div>
 {% endhighlight %}
 
@@ -66,7 +66,7 @@ doc-subtab: modal
     <div class="content">
       <p>Because a modal can contain <strong>anything you want</strong>, you can very simply use it to build an image gallery for example:</p>
       <p>
-        <a class="button is-primary is-large modal-button" data-target="#modal-bis">Launch image modal</a>
+        <a class="button is-primary is-large modal-button" data-target="modal-bis">Launch image modal</a>
       </p>
     </div>
 
@@ -78,7 +78,7 @@ doc-subtab: modal
       <img src="{{site.url}}/images/placeholders/1280x960.png">
     </p>
   </div>
-  <button class="modal-close"></button>
+  <button class="modal-close is-large"></button>
 </div>
 {% endhighlight %}
 
@@ -89,7 +89,7 @@ doc-subtab: modal
     <div class="content">
       <p>If you want a more classic modal, with a <strong>head</strong>, a <strong>body</strong> and a <strong>foot</strong>, use the <code>modal-card</code>.</p>
       <p>
-        <a class="button is-primary is-large modal-button" data-target="#modal-ter">Launch modal card</a>
+        <a class="button is-primary is-large modal-button" data-target="modal-ter">Launch modal card</a>
       </p>
     </div>
 
@@ -150,7 +150,7 @@ doc-subtab: modal
       </article>
     </div>
   </div>
-  <button class="modal-close"></button>
+  <button class="modal-close is-large"></button>
 </div>
 
 <div id="modal-bis" class="modal">
@@ -160,7 +160,7 @@ doc-subtab: modal
       <img src="{{site.url}}/images/placeholders/1280x960.png">
     </p>
   </div>
-  <button class="modal-close"></button>
+  <button class="modal-close is-large"></button>
 </div>
 
 <div id="modal-ter" class="modal">
