--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -19,7 +19,7 @@
           </a>
         </div>
         <div class="column is-narrow">
-          <!-- {% include carbon.html %} -->
+          {% include carbon.html %}
         </div>
       </div>
     </div>
