--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -117,17 +117,17 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <script async defer id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script>
-<script async defer type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+<!-- <script async defer type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script> -->
 
-<script src="{{ site.url }}/javascript/jquery-2.2.0.min.js"></script>
-<script src="{{ site.url }}/javascript/clipboard.min.js"></script>
-<script src="{{ site.url }}/javascript/bulma.js"></script>
+<!-- <script src="{{ site.url }}/javascript/jquery-2.2.0.min.js"></script> -->
+<script src="{{ site.url }}/vendor/clipboard-1.7.1.min.js"></script>
+<script src="{{ site.url }}/lib/main.js"></script>
 
 {% if page.route == 'index' %}
-  <script type="text/javascript" src="{{ site.url }}/javascript/index.js"></script>
+  <script type="text/javascript" src="{{ site.url }}/lib/index.js"></script>
 {% endif %}
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   (function($) {
     window.fnames = new Array();
     window.ftypes = new Array();
@@ -135,7 +135,7 @@
     ftypes[0]='email';
   }(jQuery));
   var $mcj = jQuery.noConflict(true);
-</script>
+</script> -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
