--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,6 +3,6 @@
   {% include head.html %}
   <body class="layout-{{ page.layout }}{% if page.doc-tab %} page-{{ page.doc-tab}}{% endif %}">
     {{ content }}
-    <script type="text/javascript" src="{{ site.url }}/javascript/main.js"></script>
+    {% include footer.html %}
   </body>
 </html>
