Add navbar description

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -11,7 +11,7 @@
         <i class="fa fa-github"></i>
       </span>
     </a>
-    <a class="nav-item" href="https://twitter.com/jgthms">
+    <a class="nav-item" href="{{ site.twitter }}">
       <span class="icon">
         <i class="fa fa-twitter"></i>
       </span>
