--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -5,14 +5,14 @@
         <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.title }}" width="112" height="28">
       </a>
 
-      <a class="navbar-item is-hidden-desktop">
-        <span class="icon">
+      <a class="navbar-item is-hidden-desktop" href="{{ site.github }}" target="_blank">
+        <span class="icon" style="color: #333;">
           <i class="fa fa-github"></i>
         </span>
       </a>
 
-      <a class="navbar-item is-hidden-desktop">
-        <span class="icon">
+      <a class="navbar-item is-hidden-desktop" href="{{ site.twitter }}" target="_blank">
+        <span class="icon" style="color: #55acee;">
           <i class="fa fa-twitter"></i>
         </span>
       </a>
@@ -62,7 +62,7 @@
           <a class="navbar-link {% if page.route == 'blog' %}is-active{% endif %}" href="{{ site.url }}/blog/">
             Blog
           </a>
-          <div class="navbar-dropdown {% if include.boxed %}is-boxed{% endif %}" data-style="width: 18rem;">
+          <div id="blogDropdown" class="navbar-dropdown {% if include.boxed %}is-boxed{% endif %}" data-style="width: 18rem;">
             {% for post in site.posts limit:3 %}
               <a class="navbar-item" href="{{ post.url }}">
                 <div class="navbar-content">
@@ -106,7 +106,7 @@
         <a class="navbar-item" href="{{ site.github }}" target="_blank">
           Github
         </a>
-        <a class="navbar-item" href="https://twitter.com/jgthms" target="_blank">
+        <a class="navbar-item" href="{{ site.twitter }}" target="_blank">
           Twitter
         </a>
         <div class="navbar-item">
