--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4458,6 +4458,7 @@ a.navbar-item.is-active,
     display: flex;
   }
   .navbar-menu {
+    box-shadow: 0 8px 16px rgba(10, 10, 10, 0.1);
     padding: 0.5rem 0;
   }
   .navbar-menu.is-active {
@@ -7682,6 +7683,15 @@ html.route-index #carbon {
   background: #55acee;
   border-color: #55acee;
   color: white;
+}
+
+@media screen and (min-width: 1000px) {
+  #blogDropdown {
+    width: 16rem;
+  }
+  #blogDropdown .navbar-item {
+    white-space: normal;
+  }
 }
 
 #about .twitter-container {
