--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -13,6 +13,12 @@ doc-subtab: navbar
       A responsive horizontal <strong>navbar</strong> that can supports images, links, buttons, and dropdowns
     </h2>
 
+    <div class="message is-success">
+      <div class="message-body">
+        <p>The new <code>.navbar</code> replaces the old <code>.nav</code> component. You can still access its documentation <a href="{{ site.url }}/documentation/components/nav/">here</a>.</p>
+      </div>
+    </div>
+
     <hr>
   </div>
 </section>
