--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -91,6 +91,7 @@ a.navbar-item,
       align-items: center
       display: flex
   .navbar-menu
+    box-shadow: 0 8px 16px rgba($black, 0.1)
     padding: 0.5rem 0
     &.is-active
       display: block
