Add navbar component, Fix JS highlight

--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -3,7 +3,9 @@ layout: default
 route: documentation
 ---
 
-{% include navbar.html %}
+<div class="container">
+  {% include navbar.html %}
+</div>
 
 <section class="hero is-primary">
   <div class="hero-body">
