--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -174,7 +174,7 @@ input[type="radio"] {
 }
 
 small {
-  font-size: 0.8em;
+  font-size: 0.875em;
 }
 
 span {
@@ -1716,14 +1716,12 @@ input[type="submit"].button {
 .content ol {
   list-style: decimal outside;
   margin-left: 2em;
-  margin-right: 2em;
   margin-top: 1em;
 }
 
 .content ul {
   list-style: disc outside;
   margin-left: 2em;
-  margin-right: 2em;
   margin-top: 1em;
 }
 
@@ -4548,6 +4546,9 @@ a.navbar-item.is-active,
   .navbar-dropdown .navbar-item {
     padding: 0.375rem 1rem;
     white-space: nowrap;
+  }
+  .navbar-dropdown a.navbar-item {
+    padding-right: 3rem;
   }
   .navbar-dropdown.is-boxed {
     border-radius: 5px;
@@ -8190,6 +8191,11 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   html.route-index .title.is-2 .icon.is-medium {
     display: none;
   }
+}
+
+:root {
+  --primary: #00d1b2;
+  --gap: 0.75rem;
 }
 
 html ::-moz-selection {
