--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -11,6 +11,7 @@ $navbar-dropdown-border: $border !default
 $navbar-dropdown-offset: -4px !default
 $navbar-dropdown-arrow: $link !default
 $navbar-dropdown-radius: $radius-large !default
+$navbar-dropdown-z: 20 !default
 
 $navbar-dropdown-item-hover-background: $background !default
 $navbar-dropdown-item-active: $primary !default
@@ -156,10 +157,12 @@ a.navbar-item,
     min-width: 100%
     position: absolute
     top: 100%
-    z-index: 20
+    z-index: $navbar-dropdown-z
     .navbar-item
       padding: 0.375rem 1rem
       white-space: nowrap
+    a.navbar-item
+      padding-right: 3rem
     &.is-boxed
       border-radius: $navbar-dropdown-radius
       border-top: none
