--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -1,4 +1,6 @@
-{% include navbar.html %}
+<div class="container">
+  {% include navbar.html %}
+</div>
 
 <section class="hero is-primary">
   <div class="hero-body">
