--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -13,6 +13,10 @@
 @import "./_sass/bsa"
 @import "./_sass/route"
 
+\:root
+  --primary: #{$primary}
+  --gap: 0.75rem
+
 html
   \::-moz-selection
     background: $primary
