--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -16,14 +16,14 @@
       </span>
     </a>
 
-    <div id="navBurger" class="navbar-burger">
+    <div class="navbar-burger burger" data-target="navMenu{{ include.id }}">
       <span></span>
       <span></span>
       <span></span>
     </div>
   </div>
 
-  <div id="navMenu" class="navbar-menu">
+  <div id="navMenu{{ include.id }}" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item {% if page.route == 'index' %}is-active{% endif %}" href="{{ site.url }}/">
         Home
