--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -1,5 +1,5 @@
 <div class="container">
-  {% include navbar.html %}
+  {% include navbar.html id="BlogHero" %}
 </div>
 
 <section class="hero is-primary">
