Fix hover/active states

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -66,7 +66,7 @@
             <a class="navbar-item" href="{{ post.url }}">
               <div class="navbar-content">
                 <p>
-                  <small>{{ post.date | date_to_string }}</small>
+                  <small class="has-text-info">{{ post.date | date_to_string }}</small>
                 </p>
                 <p>{{ post.title }}</p>
               </div>
