--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -4,7 +4,7 @@ $navbar-height: 3.25rem !default
 $navbar-item: $grey-dark !default
 $navbar-item-hover: $black !default
 $navbar-item-hover-background: $background !default
-$navbar-item-active: $red !default
+$navbar-item-active: $black !default
 $navbar-item-active-background: transparent !default
 
 $navbar-dropdown-background: $white !default
