--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -43,7 +43,11 @@ route: documentation
             <a href="{{ site.url }}/documentation/elements/box/">Elements</a>
           </li>
           <li {% if page.doc-tab == 'components' %}class="is-active"{% endif %}>
-            <a href="{{ site.url }}/documentation/components/breadcrumb/">Components</a>
+            {% if site.vernum >= 50 %}
+              <a href="{{ site.url }}/documentation/components/breadcrumb/">Components</a>
+            {% else %}
+              <a href="{{ site.url }}/documentation/components/card/">Components</a>
+            {% endif %}
           </li>
           <li {% if page.doc-tab == 'layout' %}class="is-active"{% endif %}>
             <a href="{{ site.url }}/documentation/layout/container/">Layout</a>
