--- a/docs/documentation/components/nav.html
+++ b/docs/documentation/components/nav.html
@@ -9,17 +9,19 @@ doc-subtab: nav
 <section class="section">
   <div class="container">
 
-  <div class="message is-danger">
-    <div class="message-body">
-      <p>This component has been <strong>deprecated</strong> and will be deleted soon.</p>
-    </div>
-  </div>
+    {% if site.vernum >= 50 %}
+      <div class="message is-danger">
+        <div class="message-body">
+          <p>This component has been <strong>deprecated</strong> and will be deleted soon.</p>
+        </div>
+      </div>
 
-  <div class="message is-info">
-    <div class="message-body">
-      <p>While both <code>.nav</code> and <code>.navbar</code> currently co-exist to ensure backwards compatibility, the <code>.nav</code> will probably be deleted in an upcoming update, so you should start using <a href="{{ site.url }}/documentation/components/navbar/">the new navbar</a> instead.</p>
-    </div>
-  </div>
+      <div class="message is-info">
+        <div class="message-body">
+          <p>While both <code>.nav</code> and <code>.navbar</code> currently co-exist to ensure backwards compatibility, the <code>.nav</code> will probably be deleted in an upcoming update, so you should start using <a href="{{ site.url }}/documentation/components/navbar/">the new navbar</a> instead.</p>
+        </div>
+      </div>
+    {% endif %}
 
     <h1 class="title">Nav</h1>
     <h2 class="subtitle">
