--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -6,18 +6,18 @@
   +desktop
     margin: 0 auto
     max-width: $desktop - 40px
-    width: $desktop - 40px
+    // width: $desktop - 40px
     // Modifiers
     &.is-fluid
       margin: 0 20px
       max-width: none
-      width: auto
+      // width: auto
   +widescreen
     max-width: $widescreen - 40px
-    width: $widescreen - 40px
+    // width: $widescreen - 40px
   +fullhd
     max-width: $fullhd - 40px
-    width: $fullhd - 40px
+    // width: $fullhd - 40px
 
 .delete
   +delete
