Addressing #770 & #821 coloring changes and an examples/basic.html file showcasing new possibilities

--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -52,6 +52,9 @@ route: documentation
           <li {% if page.doc-tab == 'layout' %}class="is-active"{% endif %}>
             <a href="{{ site.url }}/documentation/layout/container/">Layout</a>
           </li>
+          <li {% if page.doc-tab == 'examples' %}class="is-active"{% endif %}>
+            <a href="{{ site.url }}/documentation/examples/overview/">Examples</a>
+          </li>
         </ul>
       </div>
     </div>
