--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -12,3 +12,10 @@ a.box
     box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px $link
   &:active
     box-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 1px $link
+@each $name, $pair in $colors
+  $color: nth($pair, 1)
+  $color-invert: nth($pair, 2)
+  .is-#{$name}
+      border-color: lighten($color, 14%)
+      background-color: $color
+      color: $color-invert
