Adding is-small modifier to hero

--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -128,6 +128,13 @@
           .nav-item
             border-top-color: rgba($color-invert, 0.2)
   // Sizes
+  &.is-small
+    +tablet
+      .hero-body
+        padding-bottom: 1rem
+        padding-top: 1rem
+      .container 
+        margin: 0 auto;
   &.is-medium
     +tablet
       .hero-body
