add comment as per style guide

--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -4,6 +4,7 @@
   flex-grow: 1
   flex-shrink: 1
   padding: 0.75rem
+  // Modifiers
   &.has-vertically-aligned-content
     display: flex
     flex-direction: column
