textarea now respects rows attribute

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -77,6 +77,12 @@ $input-radius:              $radius !default
   padding: 0.625em
   resize: vertical
 
+.textarea[rows] {
+  height: auto
+  max-height: none
+  min-height: 0
+}
+
 .checkbox,
 .radio
   cursor: pointer
