--- a/docs/_includes/subnav-grid.html
+++ b/docs/_includes/subnav-grid.html
@@ -1,10 +1,10 @@
-<nav class="nav has-shadow">
+<nav class="navbar has-shadow">
   <div class="container">
-    <div class="nav-left">
-      <a class="nav-item is-tab {% if page.doc-subtab == 'columns' %}is-active{% endif %}" href="{{ site.url }}/documentation/grid/columns/">
+    <div class="navbar-brand">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'columns' %}is-active{% endif %}" href="{{ site.url }}/documentation/grid/columns/">
         Columns
       </a>
-      <a class="nav-item is-tab {% if page.doc-subtab == 'tiles' %}is-active{% endif %}" href="{{ site.url }}/documentation/grid/tiles/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'tiles' %}is-active{% endif %}" href="{{ site.url }}/documentation/grid/tiles/">
         Tiles
       </a>
   </div>
