--- a/docs/_includes/subnav-modifiers.html
+++ b/docs/_includes/subnav-modifiers.html
@@ -1,13 +1,13 @@
-<nav class="nav has-shadow">
+<nav class="navbar has-shadow">
   <div class="container">
-    <div class="nav-left">
-      <a class="nav-item is-tab {% if page.doc-subtab == 'syntax' %}is-active{% endif %}" href="{{ site.url }}/documentation/modifiers/syntax/">
+    <div class="navbar-brand">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'syntax' %}is-active{% endif %}" href="{{ site.url }}/documentation/modifiers/syntax/">
         Syntax
       </a>
-      <a class="nav-item is-tab {% if page.doc-subtab == 'helpers' %}is-active{% endif %}" href="{{ site.url }}/documentation/modifiers/helpers/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'helpers' %}is-active{% endif %}" href="{{ site.url }}/documentation/modifiers/helpers/">
         Helpers
       </a>
-      <a class="nav-item is-tab {% if page.doc-subtab == 'responsive-helpers' %}is-active{% endif %}" href="{{ site.url }}/documentation/modifiers/responsive-helpers/">
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'responsive-helpers' %}is-active{% endif %}" href="{{ site.url }}/documentation/modifiers/responsive-helpers/">
         Responsive helpers
       </a>
     </div>
