--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -70,18 +70,17 @@ $input-radius:              $radius !default
 
 .textarea
   display: block
-  max-height: 600px
   max-width: 100%
-  min-height: 120px
   min-width: 100%
   padding: 0.625em
   resize: vertical
 
-.textarea[rows] {
+.textarea:not([rows])
+  max-height: 600px
+  min-height: 120px
+
+.textarea[rows]
   height: auto
-  max-height: none
-  min-height: 0
-}
 
 .checkbox,
 .radio
